<resources>
    <string name="app_name">Cinema</string>
    <string name="_13">13+</string>
    <string name="storyline">Storyline</string>
    <string name="cast">Cast</string>
    <string name="todo">TODO</string>
    <string name="back">Back</string>
    <string name="movies_list">Movies list</string>
    <string name="inform_about">Information about</string>
    <string name="missed">missed</string>
    <string name="reviews">%d REVIEWS</string>
    <string name="running_time">%d MIN</string>
    <string name="plus">%d+</string>
    <string name="movie_is_not_loaded">Movie is not loaded</string>
    <string name="internet_connection_error">Internet connection error</string>
    <string name="unable_load_cast">Unable to load cast</string>
    <string name="top_rated">Top rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="popular">Popular</string>
    <string name="new_movie">Upcoming movie</string>
    <string name="channel_name">New Movies</string>
    <string name="movie_with_highest_rating">Movie with highest rating</string>
    <string name="base_deep_link">https://doboshacademyapp.johnsondev.com/</string>
    <string name="watch_later">Watch later</string>
    <string name="watch_the_movie">Watch the movie: </string>
    <string name="open_movie_details">\"Open movie details: \"</string>
    <string name="movie_db_ref">Movies Database refreshed!</string>
    <string name="shared_element_container_with_id">shared_element_container_$1%s</string>
    <string name="transition_name">trans_name</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="popular_list_transition_name">popular_list_transition_name</string>
    <string name="top_rated_list_transition_name">top_rated_list_transition_name</string>
    <string name="upcoming_list_transition_name">upcoming_list_transition_name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="actor_details">Actor details</string>
    <string name="actor_name">Actor Name</string>
    <string name="birth_day">Birth day</string>
    <string name="_1983_11_15">1983–11–15</string>
    <string name="death_day">Death day</string>
    <string name="symb_min">-</string>
    <string name="place_of_birth">Place of birth:</string>
    <string name="biography">Biography</string>
    <string name="read_full">Read full</string>
    <string name="bio_example">Французская актриса театра, кино и телевидения, модель. Актёрскую карьеру Ева Грин начинала в театре, затем состоялся её кинодебют в драме Бернардо Бертолуччи «Мечтатели» (2003). Мировую известность получила, сыграв роль Сибиллы, королевы Иерусалима в историческом эпосе Ридли Скотта «Царство небесное» и сыграв девушку Джеймса Бонда Веспер Линд в боевике «Казино „Рояль“» (2006). С 2006 года Грин снимается в независимом кино: «Трещины» (2009), «Чрево» (2010) и «Последняя любовь на Земле» (2011). Она появилась в телесериале «Камелот» (2011), а также в широкоэкранной адаптации Тима Бёртона «Мрачные тени» (2012). В 2014 году она исполнила роль Артемисии в «300 спартанцев: Расцвет империи» и роль Эвы Лорд в сиквеле Фрэнка Миллера и Роберта Родригеса «Город грехов 2». Одна из последних её ролей — Ванесса Айвз в драматическом сериале канала Showtime «Страшные сказки» (2014—2016). Её работа в этом сериале принесла ей номинацию на премию «Золотой Глобус» за лучшую женскую роль в драматическом телесериале на 73-ей церемонии вручения премии Золотой Глобус в 2016 году. В 2007 году Ева Грин была удостоена специальной награды BAFTA в номинации «Восходящая звезда». Весной 2018 года Грин стала кавалером (фр. Chevalier) ордена Искусств и литературы, который она получила от министерства культуры Франции.</string>
    <string name="movies">Movies</string>
    <string name="images">Images</string>
    <string name="esher_surrey_england_uk">Esher, Surrey, England, UK</string>
    <string name="trailer">Watch trailer</string>
    <string name="movie_trailers">Movie trailers</string>
    <string name="uncknown_viewvmodel">Unknown ViewModel class</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="settings">App settings</string>
    <string name="search">Search</string>
    <string name="movies_actors">Movies, actors</string>
    <string name="internet_connection_is_unavailable">Internet connection is unavailable</string>
    <string name="popular_genres">Popular genres</string>
    <string name="comedy">Comedy</string>
    <string name="popular_actors">Popular actors</string>
    <string name="actors_list">Actors list</string>
    <string name="movie_release_year_placeholder">(%s)</string>
    <string name="movie_time_in_h">%dH %dMIN</string>
    <string name="genres">Genres</string>
    <string name="movie_title_placeholder">%s (%s)</string>
    <string name="trailers">Trailers</string>
    <string name="similar">Similar</string>
    <string name="recommendations">Recommendations</string>
    <string name="actors">Actors</string>
    <string name="information">Information</string>
    <string name="story_line">Story line</string>
    <string name="film_crew">Film crew</string>
    <string name="status">Status</string>
    <string name="release_date">Release date</string>
    <string name="original_title">Original title</string>
    <string name="original_language">Original language</string>
    <string name="production_countries">Production countries</string>
    <string name="runtime">Runtime</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="prod_companies">Production companies</string>
    <string name="media">Media</string>
    <string name="posters_count">%d posters</string>
    <string name="backdrops_count">%d backdrops</string>
    <string name="posters">Posters</string>
    <string name="backdropds">Backdrops</string>
    <string name="people_count">%d people</string>
    <string name="nothing_found">Nothing found</string>
    <string name="find_movies_or_actors">Find movies or actors</string>
    <string name="error_on_loading">Error on loading</string>
    <string name="age">Age</string>
    <string name="also_known_as">Also known as</string>
    <string name="favorite_movies">Favorite movies</string>
    <string name="favorite_actors">Favorite actors</string>
    <string name="your_favorites">Your favorites</string>
    <string name="interface_settings">Interface</string>
    <string name="content_settings">Content</string>
    <string name="general_settings">General</string>
    <string name="about_settings">About</string>

</resources>