<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/back_to_detail_view_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:paddingTop="@dimen/dp_8"
            android:paddingBottom="@dimen/dp_8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/back_to_detail_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintBottom_toBottomOf="@+id/actor_name_nav"
                app:layout_constraintEnd_toStartOf="@+id/actor_name_nav"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/actor_name_nav" />

            <TextView
                android:id="@+id/actor_name_nav"
                style="@style/LightText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:text="@string/actor_details"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/back_to_detail_btn"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/iv_actor_profile_poster"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="@dimen/dp_16"
            android:background="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back_to_detail_view_group"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_actor_name_detail"
            style="@style/LightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:text="@string/actor_name"
            android:textSize="@dimen/sp_22"
            app:layout_constraintStart_toEndOf="@+id/iv_actor_profile_poster"
            app:layout_constraintTop_toTopOf="@+id/iv_actor_profile_poster" />

        <TextView
            android:id="@+id/birth_day"
            style="@style/LightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birth_day"
            android:textColor="@color/gray"
            app:layout_constraintBottom_toTopOf="@+id/death_day"
            app:layout_constraintStart_toStartOf="@+id/tv_actor_name_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_actor_name_detail" />

        <TextView
            android:id="@+id/tv_birth_day"
            style="@style/LightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:text="@string/_1983_11_15"
            app:layout_constraintStart_toEndOf="@+id/birth_day"
            app:layout_constraintTop_toTopOf="@+id/birth_day" />

        <TextView
            android:id="@+id/death_day"
            style="@style/LightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/death_day"
            android:textColor="@color/gray"
            app:layout_constraintBottom_toTopOf="@+id/place_of_birth"
            app:layout_constraintStart_toStartOf="@+id/tv_actor_name_detail"
            app:layout_constraintTop_toBottomOf="@+id/birth_day" />

        <TextView
            android:id="@+id/tv_death_day"
            style="@style/LightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:text="@string/symb_min"
            app:layout_constraintEnd_toEndOf="@+id/tv_birth_day"
            app:layout_constraintStart_toEndOf="@+id/death_day"
            app:layout_constraintTop_toTopOf="@+id/death_day" />

        <TextView
            android:id="@+id/place_of_birth"
            style="@style/LightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place_of_birth"
            android:textColor="@color/gray"
            app:layout_constraintBottom_toBottomOf="@id/iv_actor_profile_poster"
            app:layout_constraintStart_toStartOf="@+id/tv_actor_name_detail"
            app:layout_constraintTop_toBottomOf="@+id/death_day" />

        <TextView
            android:id="@+id/tv_place_of_birth"
            style="@style/LightText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/dp_8"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="Esher, Surrey, England, UK"
            app:layout_constraintBottom_toBottomOf="@+id/iv_actor_profile_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/place_of_birth"
            app:layout_constraintTop_toTopOf="@+id/place_of_birth" />

        <TextView
            android:id="@+id/biography"
            style="@style/LightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/biography"
            app:layout_constraintStart_toStartOf="@+id/iv_actor_profile_poster"
            app:layout_constraintTop_toBottomOf="@+id/iv_actor_profile_poster" />

        <TextView
            android:id="@+id/tv_biography"
            style="@style/DescriptionText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:layout_marginEnd="@dimen/dp_16"
            android:ellipsize="end"
            android:maxLines="15"
            android:paddingTop="@dimen/dp_8"
            android:paddingBottom="@dimen/dp_8"
            android:text="@string/bio_example"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/biography"
            app:layout_constraintTop_toBottomOf="@+id/biography" />

        <ImageView
            android:id="@+id/bio_mask"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:alpha="0.7"
            android:scaleType="fitXY"
            android:src="@drawable/mask"
            app:layout_constraintBottom_toBottomOf="@+id/tv_biography"
            app:layout_constraintEnd_toEndOf="@+id/tv_biography"
            app:layout_constraintStart_toStartOf="@+id/tv_biography"
            app:layout_constraintTop_toTopOf="@+id/tv_biography" />




    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>