<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:transitionName="trans_name">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/unavailable_movie_details_placeholder"
            layout="@layout/internet_unavailable_placeholder"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


        <ImageView
            android:id="@+id/head_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintDimensionRatio="3:2.2"/>

        <ImageView
            android:id="@+id/movie_mask"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            android:src="@drawable/mask"
            app:layout_constraintBottom_toBottomOf="@+id/head_image"
            app:layout_constraintEnd_toEndOf="@+id/head_image"
            app:layout_constraintStart_toStartOf="@+id/head_image"
            app:layout_constraintTop_toTopOf="@+id/head_image"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_36"
            android:layout_marginTop="@dimen/dp_56"
            android:fontFamily="@font/roboto_light"
            android:text="@string/back"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size_14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/head_image" />

        <View
            android:id="@+id/age_shape"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_marginStart="@dimen/dp_16"
            android:background="@drawable/pg_shape"
            app:layout_constraintBottom_toTopOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="parent">

        </View>

        <TextView
            android:id="@+id/tv_age"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_13"
            android:textSize="@dimen/sp_12"
            app:layout_constraintBottom_toBottomOf="@id/age_shape"
            app:layout_constraintStart_toStartOf="@id/age_shape"
            app:layout_constraintTop_toTopOf="@+id/age_shape" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/TitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:textSize="@dimen/title_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/head_image"
            tools:text="Movie Name" />

        <TextView
            android:id="@+id/movie_genres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:fontFamily="@font/roboto_light"
            android:textColor="@color/genre_color_red"
            android:textSize="@dimen/text_size_14"
            app:layout_constraintStart_toStartOf="@+id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            tools:text="@tools:sample/lorem" />

        <RatingBar
            android:id="@+id/movie_rating_bar"
            style="@style/RatingBarMini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_4"
            android:progress="80"
            android:progressBackgroundTint="@color/gray"
            android:progressTint="@color/genre_color_red"
            android:secondaryProgressTint="@color/genre_color_red"
            app:layout_constraintStart_toEndOf="@+id/tv_reviews"
            app:layout_constraintTop_toBottomOf="@+id/movie_genres" />

        <TextView
            android:id="@+id/tv_reviews"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:textColor="@color/gray"
            app:layout_constraintStart_toStartOf="@+id/movie_genres"
            app:layout_constraintTop_toBottomOf="@+id/movie_genres"
            tools:text="@tools:sample/lorem" />

        <TextView
            android:id="@+id/tv_story_line"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:text="@string/storyline"
            app:layout_constraintStart_toStartOf="@+id/tv_reviews"
            app:layout_constraintTop_toBottomOf="@+id/add_to_calendar_btn" />

        <TextView
            android:id="@+id/tv_biography"
            style="@style/DescriptionText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:paddingTop="@dimen/dp_8"
            android:paddingBottom="@dimen/dp_8"
            app:layout_constraintEnd_toEndOf="@+id/tv_title"
            app:layout_constraintStart_toStartOf="@+id/tv_story_line"
            app:layout_constraintTop_toBottomOf="@+id/tv_story_line"
            tools:text="@tools:sample/lorem" />

        <Button
            android:id="@+id/add_to_calendar_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_baseline_calendar_today_24"
            style="@style/ActionInMovieDetailsButton"
            android:text="@string/watch_later"
            app:layout_constraintStart_toStartOf="@+id/tv_reviews"
            app:layout_constraintTop_toBottomOf="@+id/tv_reviews"
            android:layout_marginTop="@dimen/dp_16"/>

        <Button
            android:id="@+id/watch_the_trailer_btn"
            style="@style/ActionInMovieDetailsButton"
            android:drawableLeft="@drawable/ic_baseline_videocam_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trailer"
            android:layout_marginStart="@dimen/dp_16"
            app:layout_constraintStart_toEndOf="@+id/add_to_calendar_btn"
            app:layout_constraintTop_toTopOf="@+id/add_to_calendar_btn" />


        <TextView
            android:id="@+id/tv_cast"
            style="@style/TitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:text="@string/cast"
            android:textSize="@dimen/text_size_14"
            app:layout_constraintStart_toStartOf="@+id/tv_reviews"
            app:layout_constraintTop_toBottomOf="@+id/tv_biography" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_actors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/dp_16"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_cast"
            tools:itemCount="5"
            tools:listitem="@layout/actor_rv_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>